[gd_scene load_steps=5 format=3 uid="uid://bp8i60xt0ph4r"]

[ext_resource type="SpriteFrames" uid="uid://d4avugof6crb4" path="res://Sprites/Enemies/Area 51 Alien/Area51Frames.tres" id="1_63bes"]
[ext_resource type="Script" path="res://Prefabs/Enemies/Alien_Area51/enemy_walk_lr.gd" id="1_as222"]
[ext_resource type="Script" path="res://Prefabs/Enemies/AnimatedSpriteUtility.gd" id="2_74bck"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_75ui5"]
radius = 36.0
height = 252.0

[node name="Area51AlienWalkLR" type="RigidBody2D" node_paths=PackedStringArray("anim_ref")]
collision_layer = 8
lock_rotation = true
script = ExtResource("1_as222")
anim_ref = NodePath("CollisionShape2D/AnimatedSprite2D")
attack_animation_time = 1.0
turn_animation_time = 0.5
death_animation_offset = Vector2(-380, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_75ui5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollisionShape2D"]
scale = Vector2(0.24, 0.24)
sprite_frames = ExtResource("1_63bes")
animation = &"Walk"
script = ExtResource("2_74bck")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="CollisionShape2D"]

[connection signal="on_shot" from="." to="." method="when_shot"]
[connection signal="screen_entered" from="CollisionShape2D/VisibleOnScreenNotifier2D" to="." method="when_visible"]
